[package]
name = "abermals"
version = "0.1.0"
authors = ["The abermals Developers"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "^0" }

[dependencies.web-sys]
version = "^0"
features = [
    'console',
    'CssStyleDeclaration',
    'Document',
    'Element',
    'Node',
    'NodeList',
    'Window',
]